spade-tests/src/snapshots/spade_tests__typeinference__assertions_require_bools.snap
---
source: spade-tests/src/typeinference.rs
---
fn test(x: int<32>) -> bool {
    assert x;
    true
}

error: Expected type bool, got int<32>
  ┌─ testinput:2:12
  │
2 │     assert x;
  │            ^ Expected bool
  │
  = note: Expected: bool
               Got: int<32>


